--- a/VoiceTimer/VoiceTimer.csproj
+++ b/VoiceTimer/VoiceTimer.csproj
@@ -157,7 +157,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\AlignmentGrid.png" />
-    <Content Include="Assets\AppBar\appbar.nocellular.png" />
     <Content Include="Assets\AppBar\appbar.questionmark.png" />
     <Content Include="Assets\ApplicationIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -187,10 +186,10 @@
     <Content Include="Assets\Images\quick.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Assets\Images\sleep.png" />
     <Content Include="Assets\Images\speak.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\Images\star.png" />
     <Content Include="Assets\Images\warm.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
