--- a/VoiceTimer/VoiceTimer.csproj
+++ b/VoiceTimer/VoiceTimer.csproj
@@ -97,9 +97,6 @@
     </Compile>
     <Compile Include="Controls\LocalizedAboutControl.cs" />
     <Compile Include="Controls\LocalizedFeedbackDialogControl.cs" />
-    <Compile Include="Controls\ThemedAboutControlBase.xaml.cs">
-      <DependentUpon>ThemedAboutControlBase.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Converter\DateToTimeConverter.cs" />
     <Compile Include="Converter\TimeSpanConverter.cs" />
     <Compile Include="InfoPage.xaml.cs">
@@ -128,10 +125,6 @@
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
     <Page Include="AboutPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Controls\ThemedAboutControlBase.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -175,6 +168,7 @@
     <Content Include="Assets\Images\consistent.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\Images\icon.png" />
     <Content Include="Assets\Images\nocellular.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
