--- a/VoiceTimer/VoiceTimer.csproj
+++ b/VoiceTimer/VoiceTimer.csproj
@@ -168,6 +168,7 @@
     <Content Include="Assets\Images\consistent.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\Images\feedback.png" />
     <Content Include="Assets\Images\icon.png" />
     <Content Include="Assets\Images\nocellular.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
